@@ -7,6 +7,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static dev.faiaz.blog.entities.Permission.*;
 
@@ -45,7 +46,7 @@ public enum Role {
 
     public List<SimpleGrantedAuthority> getAuthorities(){
         List<SimpleGrantedAuthority> authorities =  getPermissions().stream().map(
-                permission -> new SimpleGrantedAuthority(permission.name())).toList();
+                permission -> new SimpleGrantedAuthority(permission.getPermission())).collect(Collectors.toList());
        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
